--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,11 @@
   "projects": {
     "ng_material": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -25,10 +29,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-
-              "@angular/material/prebuilt-themes/indigo-pink.css"
+              "src/styles.scss",
+              "src/assets/css/spacing.css",
+              
+              "src/theme/my-theme.scss"
             ],
             "scripts": []
           },
